--- a/website/public/index.html
+++ b/website/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta
+            name="google-site-verification"
+            content="Ow7XUo_6-44OYPhtM8BDTXF2yiA6uuucMtkmYW1DF0A"
+        />
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
