Done with deploy

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -5,6 +5,7 @@
             name="google-site-verification"
             content="Ow7XUo_6-44OYPhtM8BDTXF2yiA6uuucMtkmYW1DF0A"
         />
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
